create shopping module

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
                 <li class="dropdown"><a href="#"><span>Medical Availability</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                   
                 </li>
-                <li><a href="#">Shopping</a></li>
+                <li><a href="{% url 'product_list' %}">Shopping</a></li>
                 <li><a href="{% url 'charity_page' %}">Charity</a></li>
                 
               </ul>
