create add_product function

--- a/templates/login.html
+++ b/templates/login.html
@@ -136,7 +136,7 @@
       </form>
       <div class="group">
         <a href="{% url 'password_reset' %}">Forgot Password</a>
-        <a href="{% url 'user_reg' %}">Not registered yet?</a>
+        <a href="{% url 'normal_user_page' %}">Not registered yet?</a>
  
       </div>
     </div><br>
