update add_product function

--- a/templates/register.html
+++ b/templates/register.html
@@ -104,7 +104,7 @@
               <div class="icon">
                 <i class="fas fa-heartbeat"></i>
               </div>
-              <a href="{% url 'user_reg' %}" class="stretched-link">
+              <a href="{% url 'normal_user_page' %}" class="stretched-link">
                 <h3>User</h3>
               </a>
               <p>click here to get register option.</p>
