include edit/delete option for seller page

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@
                   
                 </li>
                 <li><a href="{% url 'product_list' %}">Shopping</a></li>
+                <li><a href="{% url 'become_seller' %}">Seller</a></li>
                 <li><a href="{% url 'charity_page' %}">Charity</a></li>
                 
               </ul>
