--- a/templates/seller/my_products.html
+++ b/templates/seller/my_products.html
@@ -168,7 +168,7 @@
           <th>Price</th>
           <th>Stock Level</th>
           <th>Status</th>
-          <th style="text-align: right;">Action</th>
+          <th style="text-align: center;">Action</th>
         </tr>
       </thead>
       <tbody>
@@ -184,8 +184,9 @@
               <span class="badge badge-danger">OUT OF STOCK</span>
             {% endif %}
           </td>
-          <td style="text-align: right;">
-            <a href="#" style="color: var(--hc-primary); font-size: 0.85rem; text-decoration: none; font-weight: 600;">Edit Details</a>
+          <td style="text-align: center;">
+            <a href="{% url 'edit_product' product.id %}" style="color: var(--hc-primary); font-size: 0.85rem; text-decoration: none; font-weight: 600;">Edit Details</a>&nbsp;&nbsp;&nbsp;
+            <a href="{% url 'delete_product' product.id %}" onclick="return confirm('Are you sure?')" style="color: var(--hc-primary); font-size: 0.85rem; text-decoration: none; font-weight: 600;">Delete Details</a>
           </td>
         </tr>
         {% empty %}
