--- a/templates/index.html
+++ b/templates/index.html
@@ -83,8 +83,8 @@
                 <li class="dropdown"><a href="#"><span>Medical Availability</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                   
                 </li>
-                <li><a href="{% url 'product_list' %}">Shopping</a></li>
-                <li><a href="{% url 'become_seller' %}">Seller</a></li>
+                <li><a href="{% url 'list_product' %}">Shopping</a></li>
+                <li><a href="{% url 'seller_register' %}">Seller</a></li>
                 <li><a href="{% url 'charity_page' %}">Charity</a></li>
                 
               </ul>
